根据起点、终点计算导航路线，并绘制在地图上

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         android:supportsRtl="true"
         android:hardwareAccelerated="true"
         android:largeHeap="true"
+        android:name=".App"
         android:theme="@style/Theme.AMapTest"
         tools:targetApi="31">
         <activity
