--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,7 +75,7 @@ android {
 dependencies {
 
     implementation 'com.vmadalin:easypermissions-ktx:1.0.0'
-
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha07"
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'androidx.activity:activity-compose:1.7.0'
